--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,14 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
   },
+   "typeRoots": [
+    "node_modules/@types",
+    "node_modules/@angular",
+    "node_modules/@angular/common",
+    "node_modules/@angular/common/http",
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
